--- a/index.html
+++ b/index.html
@@ -56,9 +56,9 @@
             sedang mencari informasi mengenai mouse (Tetikus).
         </p>
         <div class="watermarkIcon">
-            <a href=""><img src="gambar/facebook1.png" alt=""></a>
-            <a href=""><img src="gambar/twiter1.png" alt=""></a>
-            <a href=""><img src="gambar/instagram1.png" alt=""></a>
+            <a href="https://www.facebook.com/mymouseofc/"><img src="gambar/facebook1.png" alt=""></a>
+            <a href="https://twitter.com/curvast"><img src="gambar/twiter1.png" alt=""></a>
+            <a href="https://www.instagram.com/mymouseofc/"><img src="gambar/instagram1.png" alt=""></a>
         </div>
     </section>
     <section id="definitionPage" class="about1">
