--- a/index.html
+++ b/index.html
@@ -26,8 +26,8 @@
                         <li><a href="#functionPage">Fungsi</a></li>
                     </ul>
                 </li>
-                <li><a href="jenis/index.html">jenis</a></li>
-                <li><a href="berita/index.html">berita</a></li>
+                <li><a href="jenis/">jenis</a></li>
+                <li><a href="berita/">berita</a></li>
                 <li><a href="">kontak</a>
                     <ul class="dropdown">
                         <li><a href="https://www.facebook.com/mymouseofc/" target="_blank">Facebook</a></li>
