--- a/berita/index.html
+++ b/berita/index.html
@@ -41,6 +41,7 @@
                 </li>
             </ul>
         </nav>
+        <a href="../toko/"><img class="shopLogo" src="../gambar/Union.png" alt="" width="30px"></a>
     </header>
     <div class="keAtas">
         <a href="#news"><img src="../gambar/keatas.png" alt="keatas" width="30px" height="auto"></a>
