--- a/jenis/index.html
+++ b/jenis/index.html
@@ -13,12 +13,12 @@
 <body>
     <!-- Header -->
     <header class="container">
-        <a href="../index.html" class="logo">
+        <a href="../" class="logo">
             <img class="logo" src="../gambar/logoWeb.png" alt="Mymouse" width="180px">
         </a>
         <nav>
             <ul class="navigation">
-                <li><a href="../index.html">beranda</a></li>
+                <li><a href="../">beranda</a></li>
                 <li><a href="">tetikus</a>
                     <ul class="dropdown">
                         <li><a href="../index.html#definitionPage">pengertian</a></li>
@@ -41,6 +41,7 @@
                 </li>
             </ul>
         </nav>
+        <a href="../toko/"><img class="shopLogo" src="../gambar/Union.png" alt="" width="30px"></a>
     </header>
     <div class="keAtas">
         <a href="#product"><img src="../gambar/keatas.png" alt="keatas" width="30px" height="auto"></a>
