--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
                 </li>
             </ul>
         </nav>
-        <a href="toko/index.php"><img class="shopLogo" src="gambar/Union.png" alt="" width="30px"></a>
+        <a href="toko/index.html"><img class="shopLogo" src="gambar/Union.png" alt="" width="30px"></a>
     </header>
     <div class="keAtas">
         <a href="#homePage"><img src="gambar/keatas.png" alt="keatas" width="30px" height="auto"></a>
