--- a/toko/index.html
+++ b/toko/index.html
@@ -208,7 +208,7 @@
                             <h6>tersedia : 27</h6>
                             <!-- <label for="catatan1">Catatan :</label>
                             <input type="text" id="catatan1" name="catatan1" maxlength="50" required> -->
-                            <button class="tombol-simpan1" type="submit" name="kirim1">Beli</button>
+                            <button class="tombol-simpan1" type="" name="kirim1">Beli</button>
                         </form>
                         <!-- <?php 
                             $harga1 = '140000';
