--- a/toko/index.html
+++ b/toko/index.html
@@ -208,7 +208,7 @@
                             <h6>tersedia : 27</h6>
                             <!-- <label for="catatan1">Catatan :</label>
                             <input type="text" id="catatan1" name="catatan1" maxlength="50" required> -->
-                            <button class="tombol-simpan1" type="" name="kirim1">Beli</button>
+<!--                             <button class="tombol-simpan1" type="" name="kirim1">Beli</button> -->
                         </form>
                         <!-- <?php 
                             $harga1 = '140000';
@@ -264,7 +264,7 @@
                             <h6>tersedia : 27</h6>
                             <!-- <label for="catatan2">Catatan :</label>
                             <input type="text" id="catatan2" name="catatan2" maxlength="50" required> -->
-                            <button class="tombol-simpan1" type="submit" name="kirim2">Beli</button>
+<!--                             <button class="tombol-simpan1" type="submit" name="kirim2">Beli</button> -->
                         </form>
                         <div class="flex">
                             <h5>Subtotal :</h5>
@@ -320,7 +320,7 @@
                             <h6>tersedia : 27</h6>
                             <!-- <label for="catatan3">Catatan :</label>
                             <input type="text" id="catatan3" name="catatan3" maxlength="50" required> -->
-                            <button class="tombol-simpan1" type="submit" name="kirim3">Beli</button>
+<!--                             <button class="tombol-simpan1" type="submit" name="kirim3">Beli</button> -->
                         </form>
                         <div class="flex">
                             <h5>Subtotal :</h5>
@@ -377,7 +377,7 @@
                             <h6>tersedia : 27</h6>
                             <!-- <label for="catatan4">Catatan :</label>
                             <input type="text" id="catatan4" name="catatan4" maxlength="50" required> -->
-                            <button class="tombol-simpan1" type="submit" name="kirim4">Beli</button>
+<!--                             <button class="tombol-simpan1" type="submit" name="kirim4">Beli</button> -->
                         </form>
                         <div class="flex">
                             <h5>Subtotal :</h5>
@@ -433,7 +433,7 @@
                             <h6>tersedia : 27</h6>
                             <!-- <label for="catatan3">Catatan :</label>
                             <input type="text" id="catatan3" name="catatan3" maxlength="50" required> -->
-                            <button class="tombol-simpan1" type="submit" name="kirim3">Beli</button>
+<!--                             <button class="tombol-simpan1" type="submit" name="kirim3">Beli</button> -->
                         </form>
                         <div class="flex">
                             <h5>Subtotal :</h5>
@@ -488,7 +488,7 @@
                             <h6>tersedia : 27</h6>
                             <!-- <label for="catatan3">Catatan :</label>
                             <input type="text" id="catatan3" name="catatan3" maxlength="50" required> -->
-                            <button class="tombol-simpan1" type="submit" name="kirim5">Beli</button>
+<!--                             <button class="tombol-simpan1" type="submit" name="kirim5">Beli</button> -->
                         </form>
                         <div class="flex">
                             <h5>Subtotal :</h5>
@@ -543,7 +543,7 @@
                             <h6>tersedia : 27</h6>
                             <!-- <label for="catatan3">Catatan :</label>
                             <input type="text" id="catatan3" name="catatan3" maxlength="50" required> -->
-                            <button class="tombol-simpan1" type="submit" name="kirim3">Beli</button>
+<!--                             <button class="tombol-simpan1" type="submit" name="kirim3">Beli</button> -->
                         </form>
                         <div class="flex">
                             <h5>Subtotal :</h5>
@@ -597,7 +597,7 @@
                             <h6>tersedia : 27</h6>
                             <!-- <label for="catatan3">Catatan :</label>
                             <input type="text" id="catatan3" name="catatan3" maxlength="50" required> -->
-                            <button class="tombol-simpan1" type="submit" name="kirim5">Beli</button>
+<!--                             <button class="tombol-simpan1" type="submit" name="kirim5">Beli</button> -->
                         </form>
                         <div class="flex">
                             <h5>Subtotal :</h5>
@@ -652,7 +652,7 @@
                             <h6>tersedia : 27</h6>
                             <!-- <label for="catatan3">Catatan :</label>
                             <input type="text" id="catatan3" name="catatan3" maxlength="50" required> -->
-                            <button class="tombol-simpan1" type="submit" name="kirim3">Beli</button>
+<!--                             <button class="tombol-simpan1" type="submit" name="kirim3">Beli</button> -->
                         </form>
                         <div class="flex">
                             <h5>Subtotal :</h5>
@@ -706,7 +706,7 @@
                             <h6>tersedia : 27</h6>
                             <!-- <label for="catatan3">Catatan :</label>
                             <input type="text" id="catatan3" name="catatan3" maxlength="50" required> -->
-                            <button class="tombol-simpan1" type="submit" name="kirim5">Beli</button>
+<!--                             <button class="tombol-simpan1" type="submit" name="kirim5">Beli</button> -->
                         </form>
                         <div class="flex">
                             <h5>Subtotal :</h5>
@@ -761,7 +761,7 @@
                             <h6>tersedia : 27</h6>
                             <!-- <label for="catatan3">Catatan :</label>
                             <input type="text" id="catatan3" name="catatan3" maxlength="50" required> -->
-                            <button class="tombol-simpan1" type="submit" name="kirim3">Beli</button>
+<!--                             <button class="tombol-simpan1" type="submit" name="kirim3">Beli</button> -->
                         </form>
                         <div class="flex">
                             <h5>Subtotal :</h5>
@@ -815,7 +815,7 @@
                             <h6>tersedia : 27</h6>
                             <!-- <label for="catatan3">Catatan :</label>
                             <input type="text" id="catatan3" name="catatan3" maxlength="50" required> -->
-                            <button class="tombol-simpan1" type="submit" name="kirim5">Beli</button>
+<!--                             <button class="tombol-simpan1" type="submit" name="kirim5">Beli</button> -->
                         </form>
                         <div class="flex">
                             <h5>Subtotal :</h5>
@@ -870,7 +870,7 @@
                             <h6>tersedia : 27</h6>
                             <!-- <label for="catatan3">Catatan :</label>
                             <input type="text" id="catatan3" name="catatan3" maxlength="50" required> -->
-                            <button class="tombol-simpan1" type="submit" name="kirim3">Beli</button>
+<!--                             <button class="tombol-simpan1" type="submit" name="kirim3">Beli</button> -->
                         </form>
                         <div class="flex">
                             <h5>Subtotal :</h5>
@@ -924,7 +924,7 @@
                             <h6>tersedia : 27</h6>
                             <!-- <label for="catatan3">Catatan :</label>
                             <input type="text" id="catatan3" name="catatan3" maxlength="50" required> -->
-                            <button class="tombol-simpan1" type="submit" name="kirim5">Beli</button>
+<!--                             <button class="tombol-simpan1" type="submit" name="kirim5">Beli</button> -->
                         </form>
                         <div class="flex">
                             <h5>Subtotal :</h5>
@@ -979,7 +979,7 @@
                             <h6>tersedia : 27</h6>
                             <!-- <label for="catatan3">Catatan :</label>
                             <input type="text" id="catatan3" name="catatan3" maxlength="50" required> -->
-                            <button class="tombol-simpan1" type="submit" name="kirim3">Beli</button>
+<!--                             <button class="tombol-simpan1" type="submit" name="kirim3">Beli</button> -->
                         </form>
                         <div class="flex">
                             <h5>Subtotal :</h5>
