--- a/index.html
+++ b/index.html
@@ -16,8 +16,8 @@
         <a href="#homePage" class="logo">
             <img class="logo" src="gambar/logoWeb.png" alt="Mymouse" width="180px">
         </a>
-        <nav>
-            <ul class="navigation">
+        <nav class="">
+            <ul class="navigation ">
                 <li><a href="#homePage">beranda</a></li>
                 <li><a href="">tetikus</a>
                     <ul class="dropdown">
@@ -39,97 +39,125 @@
                         </li>
                     </ul>
                 </li>
+                <li class="toko"><a href="/toko/">toko</a></li>
             </ul>
         </nav>
-        <a href="toko/index.php"><img class="shopLogo" src="gambar/Union.png" alt="" width="30px"></a>
+        <a href="toko/index.php" class="log"><img class="shopLogo" src="gambar/Union.png" alt="" width="30px"></a>
+        <div class="hamburger">
+            <input type="checkbox" name="" id="">
+            <span></span>
+            <span></span>
+            <span></span>
+        </div>
     </header>
     <div class="keAtas">
         <a href="#homePage"><img src="gambar/keatas.png" alt="keatas" width="30px" height="auto"></a>
     </div>
 
     <section id="homePage" class="home">
-        <div class="circle"></div>
-        <img src="gambar/mouseHome.png" alt="Mouse" width="600px" height="auto">
-        <h3>Welcome to <span class="blue">My</span>Mouse</h3>
-        <h1><span class="blue">OUR</span> SECOND <br> HANDS</h1>
-        <p> MyMouse merupakan website yang membahas tentang Mouse, dan juga berisi pembahasan seputar mouse. dari
-            pengertian, sejarah, hingga jenis dari mouse. dengan adanya MyMouse diharapkan dapat membantu orang yang
-            sedang mencari informasi mengenai mouse (Tetikus).
-        </p>
-        <div class="watermarkIcon">
-            <a href="https://www.facebook.com/mymouseofc/" target="_blank"><img src="gambar/facebook1.png" alt=""></a>
-            <a href="https://twitter.com/curvast" target="_blank"><img src="gambar/twiter1.png" alt=""></a>
-            <a href="https://www.instagram.com/mymouseofc/" target="_blank"><img src="gambar/instagram1.png" alt=""></a>
+        <div class="row">
+            <div class="col-2">
+                <h3>Welcome to <span class="blue">My</span>Mouse</h3>
+                <h1><span class="blue">OUR</span> SECOND <br> HANDS</h1>
+                <p> MyMouse merupakan website yang membahas tentang Mouse, dan juga berisi pembahasan seputar mouse.
+                    dari
+                    pengertian, sejarah, hingga jenis dari mouse. dengan adanya MyMouse diharapkan dapat membantu orang
+                    yang
+                    sedang mencari informasi mengenai mouse (Tetikus).
+                </p>
+                <div class="watermarkIcon">
+                    <a href="https://www.facebook.com/mymouseofc/" target="_blank"><img src="gambar/facebook1.png"
+                            alt=""></a>
+                    <a href="https://twitter.com/curvast" target="_blank"><img src="gambar/twiter1.png" alt=""></a>
+                    <a href="https://www.instagram.com/mymouseofc/" target="_blank"><img src="gambar/instagram1.png"
+                            alt=""></a>
+                </div>
+            </div>
+            <div class="col-1">
+                <img src="gambar/mouseHome.png" alt="Mouse">
+                <div class="circle"></div>
+            </div>
         </div>
     </section>
     <section id="definitionPage" class="about1">
-        <img src="gambar/mouse2.png" alt="Mouse??" width="45%" height="auto">
-        <h1>Apa itu Mouse?</h1>
-        <p>Bagi pengguna komputer pasti tak asing
-            lagi dengan
-            Mouse. Mouse merupakan salah satu <br>
-            perangkat inputan pada komputer berupa gerakan, tekanan tombol (click), dan penggulungan (scroll) <br>
-            yang dapat digunakan untuk memilih teks, ikon, file, dan folder. Mouse dapat diterjemahkan dalam <br>
-            bahasa Indonesia menjadi "Tetikus". Disebut seperti itu karena memang bentuknya menyerupai seperti <br>
-            tikus yang kecil, menggembung besar di bagian belakan, dan meruncing di bagian depan.</p>
+        <div class="row2">
+            <div class="col-3"><img src="gambar/mouse2.png" alt="Mouse??" width="100%" height="auto"></div>
+            <div class="col-4">
+                <h1>Apa itu Mouse?</h1>
+                <p>Bagi pengguna komputer pasti tak asing
+                    lagi dengan
+                    Mouse. Mouse merupakan salah satu
+                    perangkat inputan pada komputer berupa gerakan, tekanan tombol (click), dan penggulungan (scroll)
+                    yang dapat digunakan untuk memilih teks, ikon, file, dan folder. Mouse dapat diterjemahkan dalam
+                    bahasa Indonesia menjadi "Tetikus". Disebut seperti itu karena memang bentuknya menyerupai seperti
+                    tikus yang kecil, menggembung besar di bagian belakan, dan meruncing di bagian depan.</p>
+            </div>
+        </div>
     </section>
     <section id="historyPage" class="about2">
-        <h1>Sejarah Mouse</h1>
-        <p class="par">Mouse
-            partama kali dibuat pada <object data="gambar/penemuMouse.jpg" type=""
-                style="float: right; width: 150px; margin: 60px; margin-top: 0;"></object> tahun
-            1963,
-            oleh Douglas Engelbart seorang peneliti
-            dari Stanford Research Institute. Pada saat itu fisik mouse belum seperti sekarang. Mouse pertama yaitu
-            terbuat dari kayu, satu tombol kecil di bagian atasnya dan menggunakan dua gerigi roda dari logam yang
-            posisinya tegak lurus satu sama lain, serta sebuah lampu berwarna merah. karena memiliki kabel yang panjang
-            sehingga bentuknya menerupai tikus, kemudian alat tersebut diberi nama "mouse"(Tikus). dan ternyata cursor
-            yang berada pada layar memiliki nama yaitu "Bug" (Serangga).
-        </p>
-        <p class="par2">
-            Mouse dioperasikan dengan menghubungkan ke komputer dan ditampilkan di layar merupakan ide dari Bill
-            English, seorang kolega Douglas Engelbart. Bill English pula yang menyempurnakan bentuk mouse dan
-            menciptakan prototipe pertamanya. Pada tahun 1972. kemudian dikembangkan oleh perusahaan komputer Apple,
-            Inc. (Pengembang system operasi Macintosh). Maka dari itu, Apple-lah yang akhirnya mendapatkan paten dari
-            penggunaan mouse.
-        </p>
-
+        <div class="row3">
+            <h1>Sejarah Mouse</h1>
+            <p class="par"> <object data="gambar/penemuMouse.jpg" type=""
+                    style="float: right; width: 150px; margin: 60px; margin-top: 0;"></object>Mouse
+                partama kali dibuat pada tahun
+                1963,
+                oleh Douglas Engelbart seorang peneliti
+                dari Stanford Research Institute. Pada saat itu fisik mouse belum seperti sekarang. Mouse pertama yaitu
+                terbuat dari kayu, satu tombol kecil di bagian atasnya dan menggunakan dua gerigi roda dari logam yang
+                posisinya tegak lurus satu sama lain, serta sebuah lampu berwarna merah. karena memiliki kabel yang
+                panjang
+                sehingga bentuknya menerupai tikus, kemudian alat tersebut diberi nama "mouse"(Tikus). dan ternyata
+                cursor
+                yang berada pada layar memiliki nama yaitu "Bug" (Serangga).
+            </p>
+            <p class="par2">
+                Mouse dioperasikan dengan menghubungkan ke komputer dan ditampilkan di layar merupakan ide dari Bill
+                English, seorang kolega Douglas Engelbart. Bill English pula yang menyempurnakan bentuk mouse dan
+                menciptakan prototipe pertamanya. Pada tahun 1972. kemudian dikembangkan oleh perusahaan komputer Apple,
+                Inc. (Pengembang system operasi Macintosh). Maka dari itu, Apple-lah yang akhirnya mendapatkan paten
+                dari
+                penggunaan mouse.
+            </p>
+        </div>
     </section>
     <section id="functionPage" class="about3">
-        <h1>Fungsi Mouse</h1>
-        <img src="gambar/fung.jpg" alt="" width="auto" height="100%">
+        <!-- <img src="gambar/fung.jpg" alt="" width="auto" height="100%"> -->
         <div class="containerFung">
-
-            <div class="element">
-                <div class="persegi"></div>
-                <div class="bulat satu"></div>
-                <div class="bulat dua"></div>
-                <div class="bulat tiga"></div>
-                <div class="bulat empat"></div>
-                <div class="bulat lima"></div>
+            <h1>Fungsi Mouse</h1>
+            <div class="containerElement">
+                <div class="element">
+                    <div class="persegi"></div>
+                    <div class="bulat satu"></div>
+                    <div class="bulat dua"></div>
+                    <div class="bulat tiga"></div>
+                    <div class="bulat empat"></div>
+                    <div class="bulat lima"></div>
+                </div>
+                <ul class="fungsi">
+                    <li>
+                        <p>Memasukkan perintah kepada komputer dimana cara kerja dari mouse ini adalah dengan cara
+                            menggeser-
+                            geser mouse di permukaan papan yang datar.</p>
+                    </li>
+                    <li>
+                        <p>Penggerak pointer untuk menunjukkan lokasi tertentu di layar monitor.</p>
+                    </li>
+                    <li>
+                        <p>Berfungsi untuk menggulung (scrolling) layar dengan menggunakan roda scroll.</p>
+                    </li>
+                    <li>
+                        <p>Digunakan untuk melakukan kegiatan yang disebut dengan: klik (memilih item), double klik
+                            (membuka
+                            file), klik tahan dan geser / drag drop (memindahkan item) dan klik kanan (menampilkan
+                            pilihan
+                            menu perintah).</p>
+                    </li>
+                    <li>
+                        <p>Membuat pekerjaan menjadi lebih mudah dan cepat. Terlebih bagi kita yang sering melakukan
+                            aktivitas mengedit foto atau membuat desain.</p>
+                    </li>
+                </ul>
             </div>
-            <ul class="fungsi">
-                <li>
-                    <p>Memasukkan perintah kepada komputer dimana cara kerja dari mouse ini adalah dengan cara
-                        menggeser-
-                        geser mouse di permukaan papan yang datar.</p>
-                </li>
-                <li>
-                    <p>Penggerak pointer untuk menunjukkan lokasi tertentu di layar monitor.</p>
-                </li>
-                <li>
-                    <p>Berfungsi untuk menggulung (scrolling) layar dengan menggunakan roda scroll.</p>
-                </li>
-                <li>
-                    <p>Digunakan untuk melakukan kegiatan yang disebut dengan: klik (memilih item), double klik (membuka
-                        file), klik tahan dan geser / drag drop (memindahkan item) dan klik kanan (menampilkan pilihan
-                        menu perintah).</p>
-                </li>
-                <li>
-                    <p>Membuat pekerjaan menjadi lebih mudah dan cepat. Terlebih bagi kita yang sering melakukan
-                        aktivitas mengedit foto atau membuat desain.</p>
-                </li>
-            </ul>
         </div>
     </section>
     <footer id="footerHome">
@@ -179,6 +207,7 @@
                     src="gambar/sosmed/linkedin.png" alt="li"></a>
         </div>
     </footer>
+    <script src="script.js"></script>
 </body>
 
 </html>
