--- a/index.html
+++ b/index.html
@@ -19,8 +19,8 @@
         <nav class="">
             <ul class="navigation ">
                 <li><a href="#homePage">beranda</a></li>
-                <li><a href="">tetikus</a>
-                    <ul class="dropdown">
+                <li><button id="btnDrop1">tetikus</button>
+                    <ul class="dropdown1" id="drop1">
                         <li><a href="#definitionPage">pengertian</a></li>
                         <li><a href="#historyPage">sejarah</a></li>
                         <li><a href="#functionPage">Fungsi</a></li>
@@ -28,8 +28,8 @@
                 </li>
                 <li><a href="jenis/">jenis</a></li>
                 <li><a href="berita/">berita</a></li>
-                <li><a href="">kontak</a>
-                    <ul class="dropdown">
+                <li><button onclick="btnTetikus()" id="btnDrop2">kontak</button>
+                    <ul class="dropdown2" id="drop2">
                         <li><a href="https://www.facebook.com/mymouseofc/" target="_blank">Facebook</a></li>
                         <li><a href="https://twitter.com/curvast" target="_blank">Twiter</a></li>
                         <li><a href="https://www.instagram.com/mymouseofc/" target="_blank">Instagram</a></li>
@@ -39,10 +39,10 @@
                         </li>
                     </ul>
                 </li>
-                <li class="toko"><a href="/toko/">toko</a></li>
+                <li class="toko"><a href="toko/">toko</a></li>
             </ul>
         </nav>
-        <a href="toko/index.php" class="log"><img class="shopLogo" src="gambar/Union.png" alt="" width="30px"></a>
+        <a href="toko/" class="log"><img class="shopLogo" src="gambar/Union.png" alt="" width="30px"></a>
         <div class="hamburger">
             <input type="checkbox" name="" id="">
             <span></span>
