--- a/index.html
+++ b/index.html
@@ -50,9 +50,9 @@
             <span></span>
         </div>
     </header>
-    <div class="keAtas">
-        <a href="#homePage"><img src="gambar/keatas.png" alt="keatas" width="30px" height="auto"></a>
-    </div>
+
+    <a href="#homePage" class="keAtas"><img src="gambar/keatas.png" alt="keatas" width="30px" height="auto"></a>
+
 
     <section id="homePage" class="home">
         <div class="row">
